--- a/index.html
+++ b/index.html
@@ -20,170 +20,206 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <!-- Styles -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav class="menu">
-        <a class="logo" href="./index.html"
-          >Web<span class="logo-header-text">Studio</span></a
-        >
-
-        <ul>
-          <li class="menu-item">
-            <a class="menu-item-ref" href="./index.html">Studio</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-item-ref" href="">Portfolio</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-item-ref" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul>
-          <li>
-            <a class="menu-address" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="menu-address" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+    <header class="page-header">
+      <div class="container header-container">
+        <nav class="menu">
+          <a class="logo header-logo" href="./index.html"
+            >Web<span class="logo-header-text">Studio</span></a
+          >
+          <ul class="menu-list">
+            <li class="menu-item">
+              <a class="menu-item-ref" href="./index.html">Studio</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-item-ref" href="">Portfolio</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-item-ref" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="address-list">
+            <li>
+              <a class="menu-address" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="menu-address" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!-- Top section -->
-      <section class="main">
-        <h1 class="main-header">Effective Solutions for Your Business</h1>
-        <button class="main-button" type="button">Order Service</button>
+      <section class="main section">
+        <div class="container main-container">
+          <h1 class="main-header">Effective Solutions for Your Business</h1>
+          <button class="main-button" type="button">Order Service</button>
+        </div>
       </section>
       <!-- Our strength section -->
-      <section>
-        <h2 class="strength">Our Strength</h2>
-        <ul>
-          <li>
-            <h3 class="strength-category">Strategy</h3>
-            <p class="strength-item">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="strength-category">Punctuality</h3>
-            <p class="strength-item">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="strength-category">Diligence</h3>
-            <p class="strength-item">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="strength-category">Technologies</h3>
-            <p class="strength-item">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container strength-container">
+          <h2 class="strength">Our Strength</h2>
+          <ul class="strength-list">
+            <li class="strength-group">
+              <h3 class="strength-category">Strategy</h3>
+              <p class="strength-item">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="strength-group">
+              <h3 class="strength-category">Punctuality</h3>
+              <p class="strength-item">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="strength-group">
+              <h3 class="strength-category">Diligence</h3>
+              <p class="strength-item">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="strength-group">
+              <h3 class="strength-category">Technologies</h3>
+              <p class="strength-item">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Our team section -->
-      <section class="team">
-        <h2 class="section-header">Our Team</h2>
-        <ul>
-          <li class="team-member">
-            <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" />
-            <h3 class="team-member-name card-name">Mark Guerrero</h3>
-            <p class="team-member-role card-text">Product Designer</p>
-          </li>
-          <li class="team-member">
-            <img src="./images/img-2.jpg" alt="Tom Ford" width="264" />
-            <h3 class="team-member-name card-name">Tom Ford</h3>
-            <p class="team-member-role card-text">Frontend Developer</p>
-          </li>
-          <li class="team-member">
-            <img
-              class="team-member-img"
-              src="./images/img-1.jpg"
-              alt="Camila Garcia"
-              width="264"
-            />
-            <h3 class="team-member-name card-name">Camila Garcia</h3>
-            <p class="team-member-role card-text">Marketing</p>
-          </li>
-          <li class="team-member">
-            <img src="./images/img.jpg" alt="Daniel Wilson" width="264" />
-            <h3 class="team-member-name card-name">Daniel Wilson</h3>
-            <p class="team-member-role card-text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="team section">
+        <div class="container">
+          <h2 class="section-header">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-member">
+              <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" />
+              <div class="team-member-details">
+                <h3 class="team-member-name card-name">Mark Guerrero</h3>
+                <p class="team-member-role card-text">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-member">
+              <img src="./images/img-2.jpg" alt="Tom Ford" width="264" />
+              <div class="team-member-details">
+                <h3 class="team-member-name card-name">Tom Ford</h3>
+                <p class="team-member-role card-text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-member">
+              <img
+                class="team-member-img"
+                src="./images/img-1.jpg"
+                alt="Camila Garcia"
+                width="264"
+              />
+              <div class="team-member-details">
+                <h3 class="team-member-name card-name">Camila Garcia</h3>
+                <p class="team-member-role card-text">Marketing</p>
+              </div>
+            </li>
+            <li class="team-member">
+              <img src="./images/img.jpg" alt="Daniel Wilson" width="264" />
+              <div class="team-member-details">
+                <h3 class="team-member-name card-name">Daniel Wilson</h3>
+                <p class="team-member-role card-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section class="portfolio">
-        <h2 class="section-header">Our Portfolio</h2>
-        <ul>
-          <li class="portfolio-item">
-            <img src="./images/portfolio-1.jpg" alt="Banking App" width="360" />
-            <h3 class="card-name">Banking App</h3>
-            <p class="card-text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/portfolio-2.jpg"
-              alt="Wireless payment"
-              width="360"
-            />
-            <h3 class="card-name">Cashless Payment</h3>
-            <p class="card-text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img src="./images/portfolio-3.jpg" alt="Laptop" width="360" />
-            <h3 class="card-name">Meditation App</h3>
-            <p class="card-text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img src="./images/portfolio-4.jpg" alt="Car wheel" width="360" />
-            <h3 class="card-name">Taxi Service</h3>
-            <p class="card-text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/portfolio-5.jpg"
-              alt="App screenshots"
-              width="360"
-            />
-            <h3 class="card-name">Screen Illustrations</h3>
-            <p class="card-text">Design</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/portfolio-6.jpg"
-              alt="Lady in orange sweater"
-              width="360"
-            />
-            <h3 class="card-name">Online Courses</h3>
-            <p class="card-text">Marketing</p>
-          </li>
-        </ul>
+      <section class="portfolio section">
+        <div class="container portfolio-container">
+          <h2 class="section-header">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img
+                src="./images/portfolio-1.jpg"
+                alt="Banking App"
+                width="360"
+              />
+              <div class="portfolio-card-text">
+                <h3 class="card-name">Banking App</h3>
+                <p class="card-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/portfolio-2.jpg"
+                alt="Wireless payment"
+                width="360"
+              />
+              <div class="portfolio-card-text">
+                <h3 class="card-name">Cashless Payment</h3>
+                <p class="card-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/portfolio-3.jpg" alt="Laptop" width="360" />
+              <div class="portfolio-card-text">
+                <h3 class="card-name">Meditation App</h3>
+                <p class="card-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/portfolio-4.jpg" alt="Car wheel" width="360" />
+              <div class="portfolio-card-text">
+                <h3 class="card-name">Taxi Service</h3>
+                <p class="card-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/portfolio-5.jpg"
+                alt="App screenshots"
+                width="360"
+              />
+              <div class="portfolio-card-text">
+                <h3 class="card-name">Screen Illustrations</h3>
+                <p class="card-text">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/portfolio-6.jpg"
+                alt="Lady in orange sweater"
+                width="360"
+              />
+              <div class="portfolio-card-text">
+                <h3 class="card-name">Online Courses</h3>
+                <p class="card-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="logo logo-footer" href="./index.html">
-        Web<span class="logo-footer-text">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logo logo-footer" href="./index.html">
+          Web<span class="logo-footer-text">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
