--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </header>
     <main>
       <!-- Top section -->
-      <section class="main section">
+      <section class="main">
         <div class="container main-container">
           <h1 class="main-header">Effective Solutions for Your Business</h1>
           <button class="main-button" type="button">Order Service</button>
@@ -211,7 +211,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
         <a class="logo logo-footer" href="./index.html">
           Web<span class="logo-footer-text">Studio</span></a
         >
